fix: made custom scroll visible

--- a/src/components/styles/_config.scss
+++ b/src/components/styles/_config.scss
@@ -89,7 +89,7 @@ body {
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: $dream-blue;
+    background-color: darken($dream-blue, 3);
     border-radius: 10px;
 
     &:hover {
